feat(main): :hammer: first part

--- a/src/styles/core/utility.scss
+++ b/src/styles/core/utility.scss
@@ -5,12 +5,15 @@
 .justify-start {
   justify-content: flex-start;
 }
+
 .justify-center {
   justify-content: center;
 }
+
 .justify-end {
   justify-content: flex-end;
 }
+
 .justify-around {
   justify-content: space-around;
 }
@@ -18,12 +21,15 @@
 .align-center {
   align-items: center;
 }
+
 .self-center {
   align-self: center;
 }
+
 .self-start {
   align-self: start;
 }
+
 .self-end {
   align-self: end;
 }
@@ -31,6 +37,7 @@
 .bold {
   font-weight: bold;
 }
+
 .text-invert {
   color: white
 }
@@ -43,6 +50,7 @@
 .unpadded {
   padding: 0;
 }
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -81,9 +89,15 @@
 }
 
 @keyframes blink {
-  0% { opacity: 0; }
-  50% { opacity: 1; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .two-columns {
@@ -97,38 +111,75 @@
     &:nth-child(odd) {
       margin-right: .5em;
     }
+
     &:nth-child(even) {
       margin-left: .5em;
     }
   }
 }
 
-$motion-entrance-timing-fn: cubic-bezier(.3,1.21,.79,.91);
+.two-columns-flex-start {
+  @extend .two-columns;
+  justify-content: space-between;
+  padding-top: 1.5em;
+}
+
+$motion-entrance-timing-fn: cubic-bezier(.3, 1.21, .79, .91);
 
 @keyframes from-top {
-  0% { transform: translateY(-2em); }
-  100% { transform: translateY(0em); }
+  0% {
+    transform: translateY(-2em);
+  }
+  100% {
+    transform: translateY(0em);
+  }
 }
+
 @keyframes from-right {
-  0% { transform: translateX(4em); }
-  100% { transform: translateX(0em); }
+  0% {
+    transform: translateX(4em);
+  }
+  100% {
+    transform: translateX(0em);
+  }
 }
+
 @keyframes from-bottom {
-  0% { transform: translateY(2em); }
-  100% { transform: translateY(0em); }
+  0% {
+    transform: translateY(2em);
+  }
+  100% {
+    transform: translateY(0em);
+  }
 }
+
 @keyframes from-left {
-  0% { transform: translateX(-4em); }
-  100% { transform: translateX(0em); }
+  0% {
+    transform: translateX(-4em);
+  }
+  100% {
+    transform: translateX(0em);
+  }
 }
+
 @keyframes from-above {
-  0% { transform: scale(3); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
+
 @keyframes from-above {
-  0% { transform: scale(1); }
-  100% { transform: scale(.33333); }
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(.33333);
+  }
 }
+
 p-deck:not([mode='speaker']) {
   @each $dir in top right bottom left above below {
     p-fragment[aria-hidden='false'] .from-#{$dir},
@@ -137,6 +188,7 @@ p-deck:not([mode='speaker']) {
     }
   }
 }
+
 .from-above, .from-below {
   position: absolute;
 }
@@ -165,10 +217,12 @@ $fade-border-image-y: linear-gradient(to bottom, transparent, black var(--fade-b
   -webkit-mask-image: $fade-border-image-x;
   mask-image: $fade-border-image-x;
 }
+
 .fade-borders-y {
   -webkit-mask-image: $fade-border-image-y;
   mask-image: $fade-border-image-y;
 }
+
 .fade-borders {
   -webkit-mask-image: $fade-border-image-x, $fade-border-image-y;
   mask-image: $fade-border-image-x, $fade-border-image-y;
