--- a/src/styles/core/progress.scss
+++ b/src/styles/core/progress.scss
@@ -1,4 +1,6 @@
 .presentation-progress {
+  --progress-color: #1d99fd;
+  --progress-color-two: #FF00F7;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -6,5 +8,7 @@
   height: .5rem;
   z-index: 150;
   --progress: 0;
-  background-image: linear-gradient(to right, var(--progress-color) var(--progress), transparent 0);
+  background: linear-gradient(to right,
+    var(--progress-color) 0%,
+    var(--progress-color-two) var(--progress), transparent 0);
 }
