--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -100,10 +100,10 @@ p-fragment.landing {
 }
 
 .long-list {
-  font-size: 3vh;
+  font-size: 0.5em;
 
   li {
-    margin-bottom: 3vh;
+    margin-bottom: 0.3em;
   }
 }
 
