--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -117,6 +117,17 @@ p-fragment.landing {
   }
 }
 
+.bottom-fist-page {
+  left: 50%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  position: absolute;
+  bottom: 0;
+  font-size: 0.4em;
+  transform: translate(-50%, -50%);
+}
+
 .cover {
 
   h1 {
