--- a/src/styles/core/deck.scss
+++ b/src/styles/core/deck.scss
@@ -5,11 +5,26 @@ p-deck {
     background-color: var(--current-slide-bg, transparent);
   }
 
-  &[mode="speaker"] p-fragment {
-    opacity: 1;
+  &[mode="speaker"] p-fragment[aria-hidden="true"] {
+    opacity: .5;
   }
 }
 p-slide[debug], p-slide.debug {
   box-shadow: inset 0 0 0 1em red, inset 0 0 0 1.1em green;
 }
 
+
+p-deck[mode='speaker'] {
+  p-slide[next] {
+    transform: scale(calc(1 - var(--speaker-next-scale)));
+    top: calc(var(--speaker-next-scale) * -50%);
+    left: calc(var(--speaker-next-scale) * 50% - 50%);
+    opacity: .5;
+  }
+  p-slide[active] {
+    transform: scale(var(--speaker-next-scale));
+    top: calc(50% - var(--speaker-next-scale) * 50%);
+    left: calc(var(--speaker-next-scale) * 50% - 50%);
+    opacity: 1;
+  }
+}
