--- a/src/styles/core/progress.scss
+++ b/src/styles/core/progress.scss
@@ -1,14 +1,12 @@
 .presentation-progress {
   --progress-color: #1d99fd;
-  --progress-color-two: #FF00F7;
+  --progress-color-two: #ff00f7;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: .5rem;
+  height: 0.5rem;
   z-index: 150;
   --progress: 0;
-  background: linear-gradient(to right,
-    var(--progress-color) 0%,
-    var(--progress-color-two) var(--progress), transparent 0);
+  background: linear-gradient(to right, var(--progress-color) 0%, var(--progress-color-two) var(--progress), transparent 0);
 }
