--- a/src/styles/core/scaffold.scss
+++ b/src/styles/core/scaffold.scss
@@ -1,4 +1,6 @@
-*, ::before, ::after {
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
 
@@ -7,23 +9,23 @@ p-slide {
 }
 
 pre p-fragment {
-  opacity: .2;
+  opacity: 0.2;
 
-  &[aria-hidden="true"] p-fragment,
-  &[aria-hidden="false"] {
+  &[aria-hidden='true'] p-fragment,
+  &[aria-hidden='false'] {
     opacity: 1;
   }
 
-  code[class*="language-"] {
+  code[class*='language-'] {
     white-space: pre;
   }
 }
 
 :not(pre) > code {
-  background-color: rgba(255, 102, 0, .1);
-  border-radius: .25em;
-  padding: 0 .25em;
-  box-shadow: inset 0 0 .05em rgba(black, .25);
+  background-color: rgba(255, 102, 0, 0.1);
+  border-radius: 0.25em;
+  padding: 0 0.25em;
+  box-shadow: inset 0 0 0.05em rgba(black, 0.25);
 
   pre & {
     box-shadow: none;
@@ -31,7 +33,7 @@ pre p-fragment {
 }
 
 p {
-  margin: 0 0 .5em;
+  margin: 0 0 0.5em;
 }
 
 ul {
@@ -40,13 +42,13 @@ ul {
   list-style: none;
 }
 
-pre[class*="language-"] {
+pre[class*='language-'] {
   font-size: 50%;
 }
 
-pre.big[class*="language-"] {
+pre.big[class*='language-'] {
   font-size: 75%;
-  padding: .5em .6667em;
+  padding: 0.5em 0.6667em;
 }
 
 h1,
