--- a/src/styles/core/toolbar.scss
+++ b/src/styles/core/toolbar.scss
@@ -1,6 +1,6 @@
 .presentation-toolbar {
   position: fixed;
-  bottom: .5rem;
+  bottom: 0.5rem;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -8,10 +8,12 @@
   button {
     background-repeat: no-repeat;
     background-size: 100%;
-    opacity: .5;
+    opacity: 0.5;
     transition: opacity 300ms;
 
-    &:hover { opacity: 1; }
+    &:hover {
+      opacity: 1;
+    }
     > svg {
       width: 100%;
       height: 100%;
@@ -20,12 +22,20 @@
   }
 
   .fullscreen path {
-    &:first-child { display: inline; }
-    &:last-child { display: none; }
+    &:first-child {
+      display: inline;
+    }
+    &:last-child {
+      display: none;
+    }
 
     :fullscreen & {
-      &:first-child { display: none; }
-      &:last-child { display: inline; }
+      &:first-child {
+        display: none;
+      }
+      &:last-child {
+        display: inline;
+      }
     }
   }
 }
