--- a/src/styles/core/utility.scss
+++ b/src/styles/core/utility.scss
@@ -39,7 +39,7 @@
 }
 
 .text-invert {
-  color: white
+  color: white;
 }
 
 .inline-logo {
@@ -61,7 +61,7 @@
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   -webkit-text-fill-color: white;
   -webkit-text-stroke-color: black;
-  -webkit-text-stroke-width: .05em;
+  -webkit-text-stroke-width: 0.05em;
 
   @media print {
     -webkit-text-fill-color: unset;
@@ -130,7 +130,7 @@
   align-items: center;
 }
 
-$motion-entrance-timing-fn: cubic-bezier(.3, 1.21, .79, .91);
+$motion-entrance-timing-fn: cubic-bezier(0.3, 1.21, 0.79, 0.91);
 
 @keyframes from-top {
   0% {
@@ -182,7 +182,7 @@ $motion-entrance-timing-fn: cubic-bezier(.3, 1.21, .79, .91);
     transform: scale(1);
   }
   100% {
-    transform: scale(.33333);
+    transform: scale(0.33333);
   }
 }
 
@@ -195,7 +195,8 @@ p-deck:not([mode='speaker']) {
   }
 }
 
-.from-above, .from-below {
+.from-above,
+.from-below {
   position: absolute;
 }
 
@@ -205,9 +206,9 @@ p-deck:not([mode='speaker']) {
   left: 0;
   right: 0;
   transform: translateY(-50%);
-  background-color: rgba(black, .5);
+  background-color: rgba(black, 0.5);
   color: white;
-  text-shadow: 0 .1em .2em rgba(black, .5);
+  text-shadow: 0 0.1em 0.2em rgba(black, 0.5);
   text-align: center;
   line-height: 1.5;
   z-index: 10;
@@ -217,8 +218,20 @@ p-deck:not([mode='speaker']) {
   filter: contrast(0.65) sepia(1) hue-rotate(-15deg) saturate(0.7) brightness(0.92);
 }
 
-$fade-border-image-x: linear-gradient(to right, transparent, black var(--fade-border-width, 1em), black calc(100% - var(--fade-border-width, 1em)), transparent);
-$fade-border-image-y: linear-gradient(to bottom, transparent, black var(--fade-border-width, 1em), black calc(100% - var(--fade-border-width, 1em)), transparent);
+$fade-border-image-x: linear-gradient(
+  to right,
+  transparent,
+  black var(--fade-border-width, 1em),
+  black calc(100% - var(--fade-border-width, 1em)),
+  transparent
+);
+$fade-border-image-y: linear-gradient(
+  to bottom,
+  transparent,
+  black var(--fade-border-width, 1em),
+  black calc(100% - var(--fade-border-width, 1em)),
+  transparent
+);
 .fade-borders-x {
   -webkit-mask-image: $fade-border-image-x;
   mask-image: $fade-border-image-x;
