--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,13 +29,9 @@ em {
 .gdgLogo {
   position: absolute;
   z-index: 100;
-  height: 2em;
-  width: auto;
+  max-width: 80vw;
   top: 0.5vw;
   left: 0.5vw;
-  @media screen and (pointer: coarse) {
-    height: 1.3em;
-  }
 }
 
 .presentation-toolbar,
