--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -107,7 +107,6 @@ p-fragment.landing {
 }
 
 .slide-quote {
-  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   flex-wrap: nowrap;
@@ -202,7 +201,6 @@ pre {
 
 .bottom-fist-page {
   left: 50%;
-  display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   position: absolute;
@@ -465,7 +463,10 @@ a {
 }
 
 .text-sub-section {
-  color: #484848;
+  background: linear-gradient(90deg, #ff00d8, #ff542f);
+  font-family: "Graphik Semibold",serif;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(0,0,0,0)
 }
 
 .special-file {
