feat(part-two): :sparkles: adding new part two with initial example

--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -257,6 +257,11 @@ pre {
   }
 }
 
+.internal-flex {
+  display: flex;
+  align-items: center;
+}
+
 .my-presentation {
   display: flex;
   flex-direction: column;
