--- a/src/styles/core/utility.scss
+++ b/src/styles/core/utility.scss
@@ -257,3 +257,82 @@ $fade-border-image-y: linear-gradient(
   -webkit-mask-composite: source-in;
   mask-composite: intersect;
 }
+
+/*
+Styling for a circle sketch highlight.
+
+This uses a couple of pseudo-elements to create a sketchy look,
+with a small offset to make the border appear "3d".
+*/
+.circle-sketch-highlight {
+  --circle-sketch-height: 1em;
+  --circle-sketch-border-width: 2px;
+  --circle-sketch-border-color: #ef8c22;
+  position: relative;
+  left: 0.5em;
+  font-weight: 500;
+  &:before {
+    /* The before element creates a 'skewed' border at the bottom. */
+    content: '';
+    z-index: -1;
+    left: -0.5em;
+    top: -0.1em;
+    border-width: var(--circle-sketch-border-width);
+    border-style: solid;
+    border-color: var(--circle-sketch-border-color);
+    position: absolute;
+    border-right-color: transparent;
+    width: 100%;
+    height: var(--circle-sketch-height);
+    transform: rotate(2deg); /* Skew it a bit */
+    opacity: 0.7; /* Make it a bit transparent */
+    border-radius: 50%;
+    padding: 0.1em 0.25em;
+  }
+  &:after {
+    /* The after element creates a 'skewed' border at the top. */
+    content: '';
+    z-index: -1;
+    left: -0.5em;
+    top: 0.1em;
+    padding: 0.1em 0.25em;
+    border-width: var(--circle-sketch-border-width);
+    border-style: solid;
+    border-color: var(--circle-sketch-border-color);
+    border-left-color: transparent;
+    border-top-color: transparent;
+    position: absolute;
+    width: 100%;
+    height: var(--circle-sketch-height);
+    transform: rotate(-1deg); /* Skew it a bit */
+    opacity: 0.7; /* Make it a bit transparent */
+    border-radius: 50%;
+  }
+}
+
+/*
+Styles for a marker-like highlight
+*/
+.realistic-marker-highlight {
+  /* Position and style for the text */
+  position: relative;
+  color: #ffffff;
+  font-size: 32px;
+  margin-left: 15px;
+  font-weight: 500;
+}
+
+/* The before element creates a marker-like shape above the text */
+.realistic-marker-highlight:before {
+  /* Content, position, and style for the marker-like shape */
+  content: '';
+  background-color: #ef8c22;
+  width: 100%;
+  height: 1.3em;
+  position: absolute;
+  z-index: -1;
+  filter: url(#marker-shape);
+  left: -0.25em;
+  top: -0.05em;
+  padding: 0 0.3em;
+}
