--- a/src/styles/core/utility.scss
+++ b/src/styles/core/utility.scss
@@ -161,7 +161,7 @@ $motion-entrance-timing-fn: cubic-bezier(0.3, 1.21, 0.79, 0.91);
 
 @keyframes from-bottom {
   0% {
-    transform: translateY(2em);
+    transform: translateY(var(--from-bottom-default-translate));
   }
   100% {
     transform: translateY(0em);
