--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -469,9 +469,9 @@ a {
 
 .text-sub-section {
   background: linear-gradient(90deg, #ff00d8, #ff542f);
-  font-family: "Graphik Semibold",serif;
+  font-family: 'Graphik Semibold', serif;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: rgba(0,0,0,0)
+  -webkit-text-fill-color: rgba(0, 0, 0, 0);
 }
 
 .special-file {
@@ -537,4 +537,8 @@ pre[data-label-file]::after {
   li {
     margin-bottom: 0.6em;
   }
+}
+
+.fragment-animation-from-bottom[aria-hidden='false'] {
+  animation: from-bottom 5s;
 }
