--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -545,10 +545,13 @@ pre[data-label-file]::after {
 }
 
 .bolognajs-logo {
-  background: var(--bolognajs-color-logo);
+  /*  background: var(--bolognajs-color-logo);
   mask: url(/img/bolognajs-logo.svg) no-repeat center;
-  -webkit-mask: url(/img/bolognajs-logo.svg) no-repeat center;
-  width: 4em;
-  height: 4em;
+  -webkit-mask: url(/img/bolognajs-logo.svg) no-repeat center; */
+  img {
+    width: 4em;
+    height: 4em;
+    animation: shadow-logo 3s infinite;
+  }
   margin: 0 auto;
 }
