fix(cover): :bug: fix animation

--- a/src/styles/core/utility.scss
+++ b/src/styles/core/utility.scss
@@ -198,10 +198,10 @@ $motion-entrance-timing-fn: cubic-bezier(0.3, 1.21, 0.79, 0.91);
 @keyframes shadow-logo {
   0%,
   100% {
-    filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(0.25em 0.25em 0.1375em rgba(0, 0, 0, 0.5));
   }
   50% {
-    filter: drop-shadow(12px 18px 7px rgba(109, 108, 108, 0.5));
+    filter: drop-shadow(0.25em 0.225em 0.1375em rgba(109, 108, 108, 0.5));
   }
 }
 
