--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,16 @@
     system-ui,
     sans-serif;
   --from-bottom-default-translate: 2em;
+  --rando0: 76px;
+  --rando1: 65px;
+  --rando2: 436px;
+  --rando3: 52px;
+  --rando4: 715px;
+  --rando5: 277px;
+  --rando6: 260px;
+  --rando7: 287px;
+  --rando8: 706px;
+  --rando9: 772px;
 }
 
 :fullscreen {
