--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -487,10 +487,10 @@ p-slide {
   gfy-blob {
     display: none;
     filter: brightness(1.5);
-    position: absolute;
     z-index: -1;
-    width: 13em;
-    height: 13em;
+    width: 8em;
+    height: 8em;
+    animation: box 7s ease infinite alternate;
   }
   &[aria-hidden='false'] {
     gfy-blob {
@@ -571,4 +571,27 @@ pre[data-label-file]::after {
   width: 13em;
   inset-block-start: 8.8em;
   inset-inline-start: 3em;
+}
+
+@keyframes box {
+  0% {
+    inset-inline-start: var(--rando0);
+    inset-block-start: var(--rando1);
+  }
+  25% {
+    inset-inline-start: var(--rando2);
+    inset-block-start: var(--rando3);
+  }
+  50% {
+    inset-inline-start: var(--rando4);
+    inset-block-start: var(--rando5);
+  }
+  75% {
+    inset-inline-start: var(--rando6);
+    inset-block-start: var(--rando7);
+  }
+  100% {
+    inset-inline-start: var(--rando8);
+    inset-block-start: var(--rando9);
+  }
 }
